--- a/dailyQ/package.json
+++ b/dailyQ/package.json
@@ -10,13 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "chart.js": "^4.5.0",
     "history": "^5.3.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
-    "react-select": "^5.10.1"
+    "react-select": "^5.10.1",
+    "sweetalert2": "^11.22.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
